<resources>
    <string name="app_name">Notes Pro</string>

    <string name="choose_font_size"><font fgcolor="#000000">Choose font size</font></string>
    <string name="choose_font_color"><font fgcolor="#000000">Choose font color</font></string>
    <string name="choose_background_color"><font fgcolor="#000000">Choose background color</font></string>
    <string name="choose_text_style"><font fgcolor="#000000">Choose Text style</font></string>


    <string-array name="font_size_options">
        <item>@string/choose_font_size</item>
        <item><font fgcolor="#FFFFFF">Small (12)</font></item>
        <item><font fgcolor="#FFFFFF">Medium (16)</font></item>
        <item><font fgcolor="#FFFFFF">Large (20)</font></item>
    </string-array>

    <string-array name="text_style_options">
        <item>@string/choose_text_style</item>
        <item>Bold</item>
        <item>Italic</item>
        <item>Underline</item>
    </string-array>


    <string-array name="font_color_options">
        <item>@string/choose_font_color</item>
        <item>Black</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>Yellow</item>
    </string-array>


    <string-array name="background_color_options">
        <item>@string/choose_background_color</item>
        <item>Black</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>Yellow</item>

    </string-array>




    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="time_description">Time display</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>


</resources>